implemented region route in api
